// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getting recommendations matches snapshots 1`] = `
Array [
  Array [
    Object {
      "_id": "123",
    },
    Object {
      "_id": "123",
    },
  ],
  Array [
    Object {
      "_id": "123",
    },
  ],
  [Function],
  [Function],
]
`;

exports[`getting recommendations matches snapshots 2`] = `
Array [
  Object {
    "_id": "potato",
  },
]
`;
